# antsy_simulation

./: CMakeLists.txt  README.md  package.xml
config/: bridge.yaml  gz_env.sh
isaac/: antsy_isaac_1.usd  antsy_scene.usd
launch/: gz.launch.py  simulator.launch.xml
mujoco/: antsy.xml
mujoco/meshes/: coxa_visual_low.stl  foot_visual_low.stl  frame_visual_low.stl  tibia_visual_low.stl
scripts/: launch_gz_script.py  mujoco_simulator.py
worlds/: empty_slow_world.sdf  empty_world.sdf
