<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>antsy_simulation</name>
  <version>0.0.1</version>
  <description>Everything required only for simulation</description>
  <maintainer email="pedrosr711@gmail.com">Pedro Rocha</maintainer>
  <author email="pedrosr711@gmail.com">Pedro Rocha</author>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>actuator_msgs</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>rosgraph_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>antsy_description</exec_depend>
  <exec_depend>antsy_control</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
